--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ index.html
 <p>
   Plateforme de formation en marketing digital pour débutants.
   Apprenez les bases de la stratégie digital, des réseaux sociaux
-et de la création de contenue à travers des modules simples et pratiques.
+  à travers des modules simples et pratiques.
 </p>
 
 <h2>Ce que vous allez apprendre</h2>
