--- a/index.html
+++ b/index.html
@@ -5,26 +5,49 @@ index.html
   <meta charset="uft-8">
   <title>GC Digital - Formation Marketing Digital</title>
   <meta name="viewport" content="width=device-witdh,initial-scale=1.0">
+  
+  <style>
+    body {
+      font-family: Arial, serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #1e90ff;
+    }
+
+    H2 {
+      color: #333333
+    }
+
+    .module {
+      background: #ffffff;
+      padding: 15px;
+      margin-bottom: 10px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
+
 <body>
 
-<h1>Bienvenue sur GC Digital</h1>
+   <h1>Bienvenue sur GC Digital</h1>
 
-<p>
-  Plateforme de formation en marketing digital pour débutants.
-  Apprenez les bases de la stratégie digital, des réseaux sociaux
-  à travers des modules simples et pratiques.
-</p>
+  <p>
+    GC digital est un site de formation en marketing digital pour débutants.
+    Apprenez les bases de la stratégie digitale et des réseaux sociaux.
+  </p>
 
-<h2>Ce que vous allez apprendre</h2>
-<ul>
-  <li>Les bases du marketing digital</li>
-  <li>Les réseaux sociaux pour débutants</li>
-  <li>La création de contenu efficace</li>
-  <li>Les premières stratégies pour se lancer</li>
-</ul>
+  <h2>Chapitre 1 : Niveau débutants</h2>
+
+  <div class="module">Module 1 : Bases du marketing digital</div>
+  <div class="module">Module 2 : Réseaux sociaux pour débutants</div>
+  <div class="module">Module 3 : Création de contenu efficace</div>
+  <div class="module">Module 4 : Lancer sa première stratégie</div>
 
 </body>
-</html> 
-
-
+</html>
+  </p>
+</body>
