--- a/index.html
+++ b/index.html
@@ -1,53 +1,163 @@
-index.html
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="uft-8">
-  <title>GC Digital - Formation Marketing Digital</title>
-  <meta name="viewport" content="width=device-witdh,initial-scale=1.0">
-  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GC Digital – Formation Marketing Digital</title>
   <style>
-    body {
-      font-family: Arial, serif;
-      background-color: #f5f5f5;
+    :root {
+      --blue: #0a4fff;
+      --light-blue: #eaf0ff;
+      --white: #ffffff;
+      --text: #1f2937;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
-      padding: 20px;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
-    h1 {
-      color: #1e90ff;
+    body {
+      background-color: var(--light-blue);
+      color: var(--text);
+      line-height: 1.6;
     }
 
-    H2 {
-      color: #333333
+    header {
+      background-color: var(--blue);
+      color: var(--white);
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    main {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .intro {
+      background-color: var(--white);
+      padding: 30px;
+      border-radius: 10px;
+      margin-bottom: 30px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+    }
+
+    .intro h2 {
+      color: var(--blue);
+      margin-bottom: 15px;
+    }
+
+    .chapter {
+      margin-bottom: 40px;
+    }
+
+    .chapter h2 {
+      color: var(--blue);
+      margin-bottom: 20px;
+      font-size: 1.8rem;
+    }
+
+    .modules {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
     }
 
     .module {
-      background: #ffffff;
-      padding: 15px;
+      background-color: var(--white);
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+    }
+
+    .module:hover {
+      transform: translateY(-5px);
+    }
+
+    .module h3 {
+      color: var(--blue);
       margin-bottom: 10px;
-      border-radius: 8px;
+      font-size: 1.2rem;
+    }
+
+    footer {
+      background-color: var(--blue);
+      color: var(--white);
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    footer p {
+      font-size: 0.9rem;
     }
   </style>
 </head>
-
 <body>
 
-   <h1>Bienvenue sur GC Digital</h1>
+  <header>
+    <h1>GC Digital</h1>
+    <p>Formation en marketing digital claire et simple pour les débutants un peu perdus</p>
+  </header>
 
-  <p>
-    GC digital est un site de formation en marketing digital pour débutants.
-    Apprenez les bases de la stratégie digitale et des réseaux sociaux.
-  </p>
+  <main>
+    <section class="intro">
+      <h2>À propos de la formation</h2>
+      <p>
+        Cette formation a été conçue pour les débutants qui souhaitent comprendre le marketing digital
+        sans jargon compliqué. Chaque module est expliqué de manière simple, pratique et progressive.
+      </p>
+    </section>
 
-  <h2>Chapitre 1 : Niveau débutants</h2>
+    <section class="chapter">
+      <h2>Chapitre 1 : Les bases du marketing digital</h2>
+      <div class="modules">
+        <div class="module">
+          <h3>Module 1</h3>
+          <p><strong>Base du marketing digital</strong><br />
+          Comprendre les concepts essentiels et le fonctionnement du marketing en ligne.</p>
+        </div>
 
-  <div class="module">Module 1 : Bases du marketing digital</div>
-  <div class="module">Module 2 : Réseaux sociaux pour débutants</div>
-  <div class="module">Module 3 : Création de contenu efficace</div>
-  <div class="module">Module 4 : Lancer sa première stratégie</div>
+        <div class="module">
+          <h3>Module 2</h3>
+          <p><strong>Réseaux sociaux pour débutants</strong><br />
+          Apprendre à utiliser les réseaux sociaux de façon simple et efficace.</p>
+        </div>
+
+        <div class="module">
+          <h3>Module 3</h3>
+          <p><strong>Création de contenu efficace</strong><br />
+          Savoir créer du contenu clair, utile et engageant.</p>
+        </div>
+
+        <div class="module">
+          <h3>Module 4</h3>
+          <p><strong>Lancer sa première stratégie</strong><br />
+          Mettre en place une première stratégie marketing étape par étape.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 GC Digital – Formation Marketing Digital</p>
+  </footer>
 
 </body>
 </html>
-  </p>
-</body>
