--- a/index.html
+++ b/index.html
@@ -139,25 +139,25 @@
         <div class="module">
           <h3>Module 1 – Bases du marketing digital</h3>
           <p>Comprendre les bases essentielles du marketing digital.</p>
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/VeuspvV7DCg" allowfullscreen></iframe>
         </div>
 
         <div class="module">
           <h3>Module 2 – Réseaux sociaux pour débutants</h3>
           <p>Découvrir les réseaux sociaux et leur utilité pour un business.</p>
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/nm_Lh_731Ow" allowfullscreen></iframe>
         </div>
 
         <div class="module">
           <h3>Module 3 – Création de contenu efficace</h3>
           <p>Créer du contenu clair, simple et engageant.</p>
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/vPLRI3lE5sM" allowfullscreen></iframe>
         </div>
 
         <div class="module">
           <h3>Module 4 – Lancer sa première stratégie</h3>
           <p>Mettre en place sa toute première stratégie marketing.</p>
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID_4" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/v3sRh0z1M40" allowfullscreen></iframe>
         </div>
 
       </div>
